tests/baselines/reference/propertyAccessibility2.errors.txt
propertyAccessibility2.ts(4,11): error TS2341: Property 'x' is private and only accessible within class 'C'.


==== propertyAccessibility2.ts (1 errors) ====
    class C {
      private static x = 1;
    }
    var c = C.x;
              ~
!!! error TS2341: Property 'x' is private and only accessible within class 'C'.
    